ch3 theorem references

--- a/resources/LaTeX/2.3.functions/0081_2348a/0081_2348a.tex
+++ b/resources/LaTeX/2.3.functions/0081_2348a/0081_2348a.tex
@@ -27,7 +27,7 @@
     Direct form by the contrapositive. 
     Assume the negation of the direct consequent,
     such that \bm{$\lceil \lambda \rceil > \zeta$}. 
-    By Theorem 2347b, 
+    By Theorem 80, 
     \bm{$\lambda > \zeta$}.
     Thus,
     \begin{equation*}
@@ -46,7 +46,7 @@
     Converse form by the contrapositive. 
     Assume the negation of the direct hypothesis, 
     such that \bm{$\lambda > \zeta$}.
-    By Theorem 2347b, \bm{$\lceil \lambda \rceil > \zeta$}. 
+    By Theorem 80, \bm{$\lceil \lambda \rceil > \zeta$}. 
     Thus,
     \begin{equation*}
         \bigg[
