--- a/resources/LaTeX/2.3.functions/0082_2348b/0082_2348b.tex
+++ b/resources/LaTeX/2.3.functions/0082_2348b/0082_2348b.tex
@@ -26,7 +26,7 @@
     Direct form by the contrapositive.
     Assume the negation of the direct consequent,
     such that \bm{$\zeta > \lfloor \lambda \rfloor$}.
-    By Theorem 2347a, \bm{$\zeta > \lambda$}.
+    By Theorem 79, \bm{$\zeta > \lambda$}.
     Thus,
     \begin{equation*}
         \bigg[
@@ -44,7 +44,7 @@
     Converse form by the contrapositive.
     Assume the negation of the direct hypothesis,
     such that \bm{$\zeta > \lambda$}.
-    By Theorem 2347a, 
+    By Theorem 79, 
     \bm{$\zeta > \lfloor \lambda \rfloor$}.
     Thus,
     \begin{equation*}
