--- a/resources/LaTeX/2.3.functions/0085_2366/0085_2366.tex
+++ b/resources/LaTeX/2.3.functions/0085_2366/0085_2366.tex
@@ -30,7 +30,7 @@
 \end{theorem}
 
 \begin{proof}
-    By Theorem 2329a and Theorem 2329b, and by the definition for bijective functions, 
+    By Theorem 66 and Theorem 67, and by the definition for bijective functions, 
     \bm{$\sigma \circ \phi$} is invertible. 
     Thus, 
     \begin{equation*}
