--- a/resources/LaTeX/2.3.functions/0092_2369c/0092_2369c.tex
+++ b/resources/LaTeX/2.3.functions/0092_2369c/0092_2369c.tex
@@ -36,7 +36,7 @@
     \\ \\
     \bm{$(i)$} Assume \bm{$\lambda$} or \bm{$\iota$} (or both) are integers. 
     Without loss of generality \bm{$\iota$} is an integer.
-    By Theorem 2346, 
+    By Theorem 78, 
     \begin{equation*}
         \Big[ 
             \lceil \lambda \rceil 
@@ -62,7 +62,7 @@
     There exist real numbers \bm{$\epsilon$} and \bm{$\sigma$} such that 
     \bm{$\lceil \lambda \rceil - \lambda = \epsilon$},
     and \bm{$\lceil \iota \rceil - \iota = \sigma$}. 
-    By Theorem 2344, 
+    By Theorem 76, 
     \bm{$\lceil \lambda \rceil = \lfloor \lambda \rfloor + 1$}, 
     and \bm{$\lceil \iota \rceil = \lfloor \iota \rfloor + 1$}. 
     Hence, the identities for \bm{$\lambda$}, and \bm{$\iota$} are
@@ -140,7 +140,7 @@
     This means that \bm{$1$} is the smallest integer that is greater than or equal to 
     \bm{$2 - \big \langle \epsilon + \sigma \big \rangle$}.
     Thus, by the definition for ceiling functions, 
-    and by Theorem 2369a,
+    and by Theorem 91,
     \begin{equation*}
         \Big[ 
             \lceil \lambda \rceil 
@@ -169,7 +169,7 @@
     This means that $2$ is the smallest integer that is greater than or equal to
     \bm{$2 - \big \langle \epsilon + \sigma \big \rangle$}.
     Thus, by the definition for ceiling functions, 
-    and by Theorem 2369a,
+    and by Theorem 91,
     \begin{equation*}
         \Big[ 
             \lceil \lambda \rceil 
