--- a/resources/LaTeX/2.3.functions/0095_2370e/0095_2370e.tex
+++ b/resources/LaTeX/2.3.functions/0095_2370e/0095_2370e.tex
@@ -43,7 +43,7 @@
         \Big \langle \lambda - \epsilon + 1 \Big \rangle
     \end{equation*}
     Without loss of generality with respect to \bm{$\iota$}, 
-    by the additive compatibility law from the order axioms,
+    by additive compatibility from the order axioms,
     there exists an integer 
     \bm{$
         \lfloor \lambda + \iota \rfloor 
