--- a/resources/LaTeX/3.1.algorithms/3103/3103.tex
+++ b/resources/LaTeX/3.1.algorithms/3103/3103.tex
@@ -7,6 +7,10 @@
 
 
 \begin{document}
+    \begin{center}
+        \text{\emph{Find the sum of integers in a list.}}
+    \end{center}
+
     \begin{algorithmic}[0]
         \Statex \color{white} x \color{black}
         \Function{sum}{$\rho_1, \rho_2, \dots, \rho_\epsilon$: list of integers}
