--- a/resources/LaTeX/3.1.algorithms/3104/3104.tex
+++ b/resources/LaTeX/3.1.algorithms/3104/3104.tex
@@ -3,6 +3,11 @@
 \usepackage[noend]{algpseudocode}
 
 \begin{document}
+
+    \begin{center}
+        \text{\emph{Find the maximum difference between adjacent
+        list entries.}}
+    \end{center}
     
     \begin{algorithmic}[0]
         
