--- a/resources/LaTeX/3.1.algorithms/3105/3105.tex
+++ b/resources/LaTeX/3.1.algorithms/3105/3105.tex
@@ -7,6 +7,12 @@
 \begin{document}
 
 
+\begin{center}
+    \text{\emph{Find duplicate entries in a list of integers
+    in nondecreasing order.}}
+\end{center}
+
+
 \begin{algorithmic}[0]
     
     \Statex \color{white} x \color{black}
