--- a/resources/LaTeX/3.1.algorithms/3106/3106.tex
+++ b/resources/LaTeX/3.1.algorithms/3106/3106.tex
@@ -1,12 +1,11 @@
 \documentclass[preview]{standalone}
-\usepackage{xcolor}
-\usepackage[noend]{algpseudocode}
-
-
-\newcommand{\pluseq}{\mathrel{+}=}
 
 
 \begin{document}
+
+\begin{center}
+    \text{\emph{Count negative valued list entry occurrences.}}
+\end{center}
 
 \begin{algorithmic}[0]
     \Statex \color{white} x \color{black}
