--- a/resources/LaTeX/3.1.algorithms/3108/3108.tex
+++ b/resources/LaTeX/3.1.algorithms/3108/3108.tex
@@ -1,13 +1,11 @@
 \documentclass[preview]{standalone}
-\usepackage{xcolor}
-\usepackage[noend]{algpseudocode}
-\usepackage{mathtools}
-
-
-\DeclareMathOperator*{\nullspace}{null}
 
 
 \begin{document}
+
+\begin{center}
+    \text{\emph{Find the largest even number in a list.}}
+\end{center}
     
 \begin{algorithmic}[0]
     \Statex \color{white} x \color{black}
