--- a/resources/LaTeX/3.1.algorithms/3109/3109.tex
+++ b/resources/LaTeX/3.1.algorithms/3109/3109.tex
@@ -4,6 +4,11 @@
 
 
 \begin{document}
+
+    \begin{center}
+        \text{\emph{Determine whether a string is a palindrome.}}
+    \end{center}
+
     \begin{algorithmic}[0]
         \Statex \color{white} x \color{black}
         \Function{palindrome}{$\rho_1, \rho_2, \dots, \rho_\epsilon$: string of characters}
