--- a/resources/LaTeX/3.1.algorithms/3107/3107.tex
+++ b/resources/LaTeX/3.1.algorithms/3107/3107.tex
@@ -1,24 +1,21 @@
 \documentclass[preview]{standalone}
-\usepackage{xcolor}
-\usepackage[noend]{algpseudocode}
-\usepackage{mathtools}
-
-
-\DeclareMathOperator*{\nullspace}{null}
 
 
 \begin{document}
 
+    \begin{center}
+        \text{\emph{Find the last even list entry location.}}
+    \end{center}
+
     \begin{algorithmic}[0]
         \Statex \color{white} x \color{black}
         \Function{last even}{$\rho_1, \rho_2, \dots, \rho_\epsilon$: list of integers}
-        \State $\phi \gets \nullspace$
-        \For{$\iota = 1, \epsilon$}
+        \For{$\iota = \epsilon, 1$}
             \If {$\lnot \big [ \rho_\iota \langle $mod $ 2 \rangle \big ]$}
-                \State $\phi \gets \iota$
+                \State \Return{$\iota$}
             \EndIf
         \EndFor
-        \State \Return{$\phi$}
+        \State \Return{$\nullspace$}
         \color{lightgray} \Comment{returns $\nullspace$ if every integer $\rho_\iota$ is odd}
         \color{black}
         \EndFunction
